@startuml

class Car <<context>> {
- DriveState state
- List<Person> people
- List<Window> windows

+ void setState(DriveState state)
+ List<Person> getPeople()
+ List<Window> getWindows()
+ void pickupPerson(Person person)
+ void setWindows(int height)
}

interface DriveState {
    + void setWindows(int height)
    + void pickupPerson(Person person)
    + void setSpeed(int speed)
}

class Drive0Km implements DriveState {
    - Car car
    + void setWindows(int height)
    + void pickupPerson(Person person)
}

class Drive30Km implements DriveState {
    - Car car
    + void setWindows(int height)
    + void pickupPerson(Person person)
}

class Drive80Km implements DriveState {
    - Car car
    + void setWindows(int height)
    + void pickupPerson(Person person)
}


class Person

class Window {
    - int height
    + getHeight()
    + setHeight(int height)

}

Car -> DriveState : "<<use>>"
Car --> Person
Car --> Window

@enduml